# dp-gnn

./: .gitignore  ENVIRONMENT.md  README.md  REPRO_NOTES.md  pyproject.toml
.cursor/commands/: analyze.md  doit.md  exe.md  patch.md  repro.md
.cursor/rules/: Target-environment.mdc  functional-test-required.mdc  minimal-changes-first.mdc  project-context.mdc
.cursor/skills/analyze-before-modify/: SKILL.md
.cursor/skills/reproduce-research-code/: SKILL.md
configs/: base.json  ogbn_arxiv_dp_gcn_adam.json
refrence_repo/differentially_private_gnns/: train.py
scripts/: install_env.sh
scripts/repro/: ogbn_arxiv_disjoint_dp_gcn_adam.sh  ogbn_arxiv_dp_gcn_adam.sh
src/dpgnn_repro/: __init__.py  adjacency.py  cli.py  config.py  eval.py  input_pipeline.py  logging.py  models.py  train.py
src/dpgnn_repro/accounting/: __init__.py  accounting.py
src/dpgnn_repro/data/: __init__.py  download_dataset.py  loader.py
src/dpgnn_repro/dp/: __init__.py  optimizer.py  privacy_accounting.py
src/dpgnn_repro/models/: __init__.py  gcn.py  mlp.py  model_init.py
src/dpgnn_repro/sampling/: __init__.py  neighbor.py  subsample.py
src/dpgnn_repro/subgraph/: __init__.py  extract.py
tests/: __init__.py  test_model_init.py  test_privacy_accounting.py
tests/functional/: __init__.py  test_data_loading.py  test_dataset_download.py  test_dp_sgd_step.py  test_get_dataset_equivalent.py  test_get_subgraphs.py  test_make_subgraph_from_indices.py  test_neighbor_sampling.py  test_privacy_accounting.py  test_subgraph_extraction.py  test_subsample_graph.py
